--- a/3rdparty/jvm/org/codehaus/mojo/BUILD
+++ b/3rdparty/jvm/org/codehaus/mojo/BUILD
@@ -6,7 +6,7 @@ java_library(
         "//external:jar/org/codehaus/mojo/animal_sniffer_annotations"
     ],
     visibility = [
-        "//3rdparty/jvm:__subpackages__"
+        "//visibility:public"
     ]
 )
 
