--- a/3rdparty/jvm/org/spire_math/BUILD
+++ b/3rdparty/jvm/org/spire_math/BUILD
@@ -7,7 +7,7 @@ java_library(
         "//external:jar/org/spire_math/jawn_parser_2_12"
     ],
     visibility = [
-        "//3rdparty/jvm:__subpackages__"
+        "//visibility:public"
     ]
 )
 
