--- a/scala/bloop/BUILD
+++ b/scala/bloop/BUILD
@@ -20,13 +20,15 @@ scala_binary(
     visibility = ["//visibility:public"],
     deps = [
         "//src/java/io/bazel/rulesscala/worker",
-        "@scalafmt//:net_sourceforge_argparse4j_argparse4j", #TODO move
+        "//3rdparty/jvm/net/sourceforge/argparse4j:argparse4j",
         "//3rdparty/jvm/ch/epfl/scala:bsp4j",
         "//3rdparty/jvm/ch/epfl/scala:bloop_config",
         "//3rdparty/jvm/ch/epfl/scala:bloop_launcher",
+        "//3rdparty/jvm/org/scala_lang/modules:scala_java8_compat",
+
 #        "//external:io_bazel_rules_scala/bloop/lsp4j-jsonrpc", # why do I need this
 #        "//external:io_bazel_rules_scala/sbt/ipcsocket", # ok somethings wrong
-        "//external:io_bazel_rules_scala/scala_lang/java8-compat",
+#        "//external:io_bazel_rules_scala/scala_lang/java8-compat",
     ],
     unused_dependency_checker_mode = "warn", #TODO
 
