--- a/3rdparty/jvm/io/argonaut/BUILD
+++ b/3rdparty/jvm/io/argonaut/BUILD
@@ -7,7 +7,7 @@ java_library(
         "//external:jar/io/argonaut/argonaut_2_12"
     ],
     visibility = [
-        "//3rdparty/jvm:__subpackages__"
+        "//visibility:public"
     ]
 )
 
