--- a/3rdparty/jvm/net/sourceforge/argparse4j/BUILD
+++ b/3rdparty/jvm/net/sourceforge/argparse4j/BUILD
@@ -1,9 +1,9 @@
 load("//scala:scala.bzl", "scala_binary", "scala_library")
 load("//scala:scala_import.bzl", "scala_import")
 java_library(
-    name = "error_prone_annotations",
+    name = "argparse4j",
     exports = [
-        "//external:jar/com/google/errorprone/error_prone_annotations"
+        "//external:jar/net/sourceforge/argparse4j/argparse4j"
     ],
     visibility = [
         "//visibility:public"
