--- a/3rdparty/jvm/org/checkerframework/BUILD
+++ b/3rdparty/jvm/org/checkerframework/BUILD
@@ -6,7 +6,7 @@ java_library(
         "//external:jar/org/checkerframework/checker_qual"
     ],
     visibility = [
-        "//3rdparty/jvm:__subpackages__"
+        "//visibility:public"
     ]
 )
 
