--- a/3rdparty/jvm/org/scala_sbt/ipcsocket/BUILD
+++ b/3rdparty/jvm/org/scala_sbt/ipcsocket/BUILD
@@ -8,7 +8,7 @@ java_library(
         "//external:jar/org/scala_sbt/ipcsocket/ipcsocket"
     ],
     visibility = [
-        "//3rdparty/jvm:__subpackages__"
+        "//visibility:public"
     ]
 )
 
