--- a/scala/bloop/BUILD
+++ b/scala/bloop/BUILD
@@ -24,14 +24,9 @@ scala_binary(
         "//3rdparty/jvm/ch/epfl/scala:bsp4j",
         "//3rdparty/jvm/ch/epfl/scala:bloop_config",
         "//3rdparty/jvm/ch/epfl/scala:bloop_launcher",
-        "//3rdparty/jvm/org/scala_lang/modules:scala_java8_compat",
-
-#        "//external:io_bazel_rules_scala/bloop/lsp4j-jsonrpc", # why do I need this
-#        "//external:io_bazel_rules_scala/sbt/ipcsocket", # ok somethings wrong
-#        "//external:io_bazel_rules_scala/scala_lang/java8-compat",
+        "//3rdparty/jvm/org/scala_lang/modules:scala_java8_compat"
     ],
     unused_dependency_checker_mode = "warn", #TODO
-
 )
 
 load(
