--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -27,6 +27,10 @@ options:
       target:
         "@io_bazel_rules_scala_scala_xml//:io_bazel_rules_scala_scala_xml"
 dependencies:
+  commons-io:
+    commons-io:
+      version: 2.0.1
+      lang: java
   net.sourceforge.argparse4j:
     argparse4j:
       version: 0.8.1
@@ -49,3 +53,4 @@ dependencies:
     bloop-launcher:
       version: 1.4.0-RC1
       lang: scala
+
