Update bloop launcher / config / bsp

--- a/3rdparty/jvm/com/github/plokhotnyuk/jsoniter_scala/BUILD
+++ b/3rdparty/jvm/com/github/plokhotnyuk/jsoniter_scala/BUILD
@@ -1,9 +1,10 @@
 load("//scala:scala.bzl", "scala_binary", "scala_library")
 load("//scala:scala_import.bzl", "scala_import")
 java_library(
-    name = "error_prone_annotations",
+    name = "jsoniter_scala_core_2_12",
     exports = [
-        "//external:jar/com/google/errorprone/error_prone_annotations"
+        "//3rdparty/jvm/org/scala_lang:scala_library",
+        "//external:jar/com/github/plokhotnyuk/jsoniter_scala/jsoniter_scala_core_2_12"
     ],
     visibility = [
         "//visibility:public"
